k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  - name: https  
    port: 443
    targetPort: 443  
  selector:
    app: hello-world
